Fixed Player on IE

--- a/src/components/Player/Player.styl
+++ b/src/components/Player/Player.styl
@@ -114,6 +114,10 @@ $cut-player-ratio = (798/1920*100%)
 		&.vjs-fullscreen {
 			background #000
 			top auto
+
+			.vjs-tech {
+				position fixed
+			}
 		}
 	}
 	&__poster + &__video {
